some fixes with scrollbar

--- a/styles/style.css
+++ b/styles/style.css
@@ -79,6 +79,7 @@ main {
         width: 80%;
     }
 }
+
 .card-information {
     background-color: var(--translucent-white);
     padding: 30px;
@@ -87,17 +88,18 @@ main {
     overflow-y: scroll;
     overflow-x: hidden;
     height: 80vh;
+    
     /* Disable display on scrollbar */
     -ms-overflow-style: none; /* Works for IE & Edge */
     scrollbar-width: none; /* Works for Firefox */
-
-    & h2{
-        text-align: center;
-        margin-bottom: var(--margin);
-    }
 }
 .card-information::-webkit-scrollbar {
     display:none;
+}
+
+.card-information h2{
+    text-align: center;
+    margin-bottom: var(--margin);
 }
 
 .user-img{
